feat(全栈): AI 服务优化、聊天增强、测试扩展与文档补全
前端:
- ChatProvider 重构: 支持引用消息、AI 回复轮询、连接状态管理
- ChatScreen UI 改进: 调试信息栏、消息引用交互
- SplashScreen 支持 URL 参数自动登录（E2E 测试用）
- Model null safety: Group/Message 的 fromJson 兼容 null 字段
- 新增 auto_login_utils.dart 工具

后端:
- AIService 重构: 优化上下文构建、token 估算、错误处理
- MessageRepository 新增 eager fetch sender 查询
- AIServiceTest 大幅扩展（337+ 行新测试）

测试:
- chat_provider_test 从基础覆盖扩展到 943+ 行全面测试
- 新增 auto_login_parse_test（80 行）
- 新增 dual_test.sh 双账号测试脚本

文档:
- CLAUDE.md 增加文档规范（版本头格式）
- doc/chat/: AI 优化方案系列文档（5 篇）
- doc/test/: 前后端测试规范（6 篇）
- doc/ui/: logo 设计 prompt
- doc/e2e: dev-notes 迁移重命名
- 清理旧 doc/ui_inference 截图

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>